--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Lozano <109lozanoi@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+dtm2txt = {path = "../dtm2txt"}
 
 [dependencies.sdl2]
 version = "0.31.0"
