--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies]
 dtm2txt = {path = "../dtm2txt"}
 serialport = "3.1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dependencies.sdl2]
 version = "0.31.0"
