--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ serde_json = "1.0"
 [dependencies.sdl2]
 version = "0.31.0"
 features = ["image"]
+
+[dependencies.winapi]
+version = "0.3.6"
+features = ["psapi", "memoryapi", "processthreadsapi"]
+
+[target.windows.dependencies]
