--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serialport = "3.1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+serde_yaml = "0.8"
 
 [dependencies.sdl2]
 version = "0.31.0"
